Agregué libraria IR de control remoto, hice cambios de la misma para que compile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "iom328p.h": "c",
         "delay.h": "c",
         "hotwheels.h": "c",
-        "*.in": "c"
+        "*.in": "c",
+        "stdint.h": "c",
+        "uart.h": "c",
+        "stdio.h": "c"
     }
 }
