--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "stdint.h": "c",
         "uart.h": "c",
         "stdio.h": "c",
-        "duinoeyes.h": "c"
+        "duinoeyes.h": "c",
+        "avr_necdecoder.h": "c"
     }
 }
